--- a/index.html
+++ b/index.html
@@ -32,29 +32,65 @@
 
 <p>Please feel free to check out the code and forward any suggestions or feedback. </p>
 
-<p><em>0.1</em> </p>
+<p><em>0.1</em>: Prototype (done)</p>
+
+<p>What we made:</p>
 
 <ul>
-<li>[x] Proof of concept</li>
-</ul><p><em>0.2</em> The next step</p>
+<li>document, node, socket data model</li>
+<li>compiler supporting raw text and latex</li>
+</ul><p>What we learned: </p>
+
+<ul>
+<li>basic python syntax</li>
+<li>github</li>
+<li>vim</li>
+</ul><p><em>0.2</em> A big step forward (in progress)</p>
+
+<p>What we are making:</p>
 
 <ul>
 <li>[x] separation of doc instance and doc model variables</li>
 <li>[ ] unit testing</li>
-<li>[ ] refactor data structure and data manipulation classes to provide enough flexibility for future versions</li>
+<li>[x] refactor data structure and data manipulation classes to provide enough flexibility for future versions</li>
 <li>[ ] amendment duality (simultaneously a standalone contract as well as an amending package)</li>
 <li>[ ] Support markdown, .txt and LaTeX formats in parallel (strategy pattern for visitors)</li>
-</ul><p><em>0.3</em> Make it last</p>
+</ul><p>What we are learning:</p>
+
+<ul>
+<li>generators</li>
+<li>visitor pattern</li>
+<li>builder pattern</li>
+<li>unit testing</li>
+</ul><h2>- sublime text 2</h2>
+
+<p><em>0.3</em> Make it last
+What we want to learn:</p>
+
+<p>What we want to make:</p>
 
 <ul>
 <li>[ ] DB</li>
-<li><p>[ ] Document versioning (git?)</p></li>
-<li><p>[ ] Accounts</p></li>
-<li><p>[ ] Design interface</p></li>
-<li><p>[ ] Prototype interface</p></li>
-<li><p>[ ] Touch-screen document execution</p></li>
-<li><p>[ ] Payments</p></li>
-<li><p>[ ] Quality &amp; timeliness feedback loops</p></li>
+<li>[ ] Component versioning (git?) </li>
+<li>[ ] Agreement slicing</li>
+<li>[ ] Rudimentary web interface via GAE</li>
+</ul><p><em>0.4</em> Make it pretty</p>
+
+<p><em>0.5</em> Make it really useful</p>
+
+<p><em>0.6</em> Make it social</p>
+
+<p><em>0.7</em> Make money</p>
+
+<p><em>0.8</em> Teach it how to learn</p>
+
+<ul>
+<li>[ ] Accounts</li>
+<li>[ ] Design interface</li>
+<li>[ ] Prototype interface</li>
+<li>[ ] Touch-screen document execution</li>
+<li>[ ] Payments</li>
+<li>[ ] Quality &amp; timeliness feedback loops</li>
 </ul><p>1.0 ? </p>
       </section>
       <footer>
